--- a/static/index.html
+++ b/static/index.html
@@ -24,8 +24,8 @@
   </head> 
   <body bgcolor="white" height="100%" width="100%"> 
     <div id="debug"></div>
-    <canvas id="c" width="100%" height="100%" style="-webkit-tap-highlight-color: transparent;"></canvas> 
-
+    <canvas id="c" width="100%" height="100%"></canvas> 
+    <img src="/static/kernel.jpg" width="100%" height="100%" style="position:absolute; top:0; left:0; z-index:-1;">
     <script>
       // Fix me
 var canvas = document.getElementById('c');
@@ -46,16 +46,13 @@ world = {};
 
 //XXX: TODO Make this prettier!
 function drawCircle(context,entity) {
+    let img = new Image();
+    img.src = '/static/popcorn.png';
     with(context) {
-        beginPath();                
-        lineWidth = 3;
-        var x = entity["x"];
-        var y = entity["y"];
-        //moveTo(x,y);
-        fillStyle = entity["colour"];
-        strokeStyle = fillStyle;
-        arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);  
-        stroke();                                
+        var x = entity["x"]-50;
+        var y = entity["y"]-50;
+        var num = entity["num"];
+        drawImage(img, x, y, img.width*num, img.height*num);                               
     }
 }
 
@@ -72,7 +69,8 @@ function prepEntity(entity) {
 function clearFrame() {
     with(context) {
 	moveTo(0,0);
-	fillStyle = "#000";
+
+	fillStyle = "rgba(0,0,0,0)";
 	fillRect(0,0,W,H);
     }
 
@@ -123,8 +121,10 @@ function getPosition(e) {
 
 function addEntity(entity, data) {
     world[entity] = data;
-    drawNextFrame(); // (but should we?)
     //XXX: Send a XHTML Request that updates the entity you just modified!
+    let dict = {};
+    dict[entity] = data;
+    socket.send(JSON.stringify(dict));
 }
 var counter = 0;
 function addEntityWithoutName(data) {
@@ -231,16 +231,15 @@ mouse = (function() {
 // Add the application specific mouse listeners!
 //XXX: TODO Make these prettier!
 mouse.mousedowners.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'blue'});
+    addEntityWithoutName({'x':x,'y':y,'num':0.4});
 });
 
 mouse.mouseuppers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'red'});
+    addEntityWithoutName({'x':x,'y':y,'num':0.3});
 });
 
 mouse.mousedraggers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'green',
-                          'radius':10});
+    addEntityWithoutName({'x':x,'y':y,'num':0.2,});
 });
 
 
@@ -254,6 +253,7 @@ function wsSetup() {
     socket = new WebSocket(url);
     socket.onopen = function() {
         //XXX: TODO What are you going to do here?
+        debug("WebSocket Open:");
     };
     socket.onerror = function(msg) {
         debug("WebSocket Error:" + msg.data);
@@ -261,7 +261,12 @@ function wsSetup() {
     socket.onmessage = function(msg) {  
         try {
             debug("WebSocket Recv:" + msg.data);
-            //XXX: TODO What are you going to do here?            
+            //XXX: TODO What are you going to do here? 
+            let data = JSON.parse(msg.data);
+            for (let entity in data) {
+                world[entity] = data[entity];
+            }           
+            drawNextFrame();
         } catch (e) {
             alert("socket on message: " + e);
         }
